@@ -1,5 +1,10 @@
 2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Remove the mono
+	version number comment from the generated files.
+
+2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* MonoDevelop.GtkCore/ReferenceManager.cs: Track API changes.
 
 2008-12-09  Michael Hutchinson  <mhutchinson@novell.com>
